--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,13 @@ html {
 
 /*making skip links be hidding and appear when tab is pressed*/
 .skip-links a{
-background: #826cff;
+    background: #826cff;
     color: #f3f7ff;
     border: 1px solid white;
     height: 30px;
     left: 0%;
-    padding: 3px;
+    margin-left: 7%;
+    margin-top: 15%;
     position: absolute;
     transform: translateY(-100%);
     transition: transform 0.3s;
@@ -43,6 +44,88 @@ background: #826cff;
     font-size: 1.5rem;
 }
 
+footer {
+    margin-top: 8%;
+}
+
+/*adds padding on foot and navbar so the text is not against the page*/
 .padding-on-text {
     padding: 3.5%;
+}
+
+/*the about section in homepage*/
+.about-sect a img {
+    width: 75%;
+    height: 75%;
+    margin-top: 7%;
+    margin-bottom: 5%;
+    border: 3px solid #bf50f2;
+}
+
+.about-sect h1 {
+    font-family: 'Playfair Display', serif;
+    color: red;
+    font-size: 2rem;
+    padding-top: 3.5%;
+}
+
+.about-sect p {
+    font-family: 'Playfair Display', serif;
+    font-weight: 500;
+    color: orange;
+    font-size: 1.5rem;
+    text-align: right;
+    margin-right: 13%;
+}
+
+.contact-sect h1 {
+    font-family: 'Playfair Display', serif;
+    color: red;
+    font-size: 2rem;
+    padding-top: 7%;
+    margin-left: 5%;
+    text-align: left;
+}
+
+form {
+    margin-top: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+form label, form button {
+    margin-top: 2.5%;
+}
+
+.contact-img {
+    margin-top: 10%;
+    width: 100%;
+    height: 100%;
+}
+
+.about-page-sect h1 {
+    font-family: 'Playfair Display', serif;
+    color: red;
+    font-size: 2rem;
+    padding-top: 3.5%;
+}
+
+.about-page-sect img {
+    width: 75%;
+    height: 75%;
+    margin-top: 7%;
+    margin-bottom: 5%;
+    border: 6px solid #ff80b3;
+}
+
+.aboutmebtn a {
+    margin-top: 2%;
+    background-color: #4ceb51; /* Green */
+    border: none;
+    color: white;
+    padding: 3%;
+    text-align: center;
+    text-decoration: none;
+    display:block;
+    font-size: 16px;
 }
