--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ form label, form button {
     margin-left: 10%;
 }
 
-*skip links list*/
+/*skip links list*/
 .skip-links{
     list-style: none;
     margin: 0;
