--- a/css/main.css
+++ b/css/main.css
@@ -363,12 +363,15 @@ form label, form button {
 }
 
 .work-container {
+    margin-top: 6%;
     display: grid;
         /*3 col, 4 row*/
         grid-template-columns: 33% 33% 33%;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
         padding: 2% 7% 2% 7%;
         justify-content: center;
+    
+    background-color: #fff0ff;
 }
 
 .box1 {
@@ -429,10 +432,54 @@ form label, form button {
     grid-row: 3 / 4;
 }
 
+
+
 .box10 {
-    width: 150%;
+    margin-top: 20%;
+    width: 100%;
+    height: 60%;
     grid-column: 1 / 2;
     grid-row: 4 / 5;
+}
+
+.box11 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.box12 {
+    margin-top: 20%;
+    width: 100%;
+    height: 60%;
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+}
+
+
+
+.box13 {
+    margin-top: 20%;
+    width: 100%;
+    height: 60%;
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+.box14 {
+    margin-top: 20%;
+    width: 100%;
+    height: 60%;
+    overflow: hidden;
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+}
+
+.box15 {
+    margin-top: 20%;
+    width: 80%;
+    height: 90%;
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
 }
 
 }
